--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,4 +1,5 @@
 @import "./common.scss";
+@import "./game.scss";
 @import "./components/cards.scss";
 @import "./components/messageBox.scss";
 @import "./components/score.scss";
