--- a/src/styles/game.scss
+++ b/src/styles/game.scss
@@ -4,4 +4,8 @@
   align-content: center;
   flex-direction: column;
   width: 700px;
+  background-color: green;
+  padding: 50px;
+  margin: auto;
+  color: lime;
 }
