--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,4 +1,8 @@
 body {
   display: flex;
   justify-content: center;
+  font-family: 'VT323', monospace;
+  font-size: 20px;
+  height: 100vh;
+  background-color: lime;
 }
