--- a/src/styles/components/messageBox.scss
+++ b/src/styles/components/messageBox.scss
@@ -1,15 +1,35 @@
-.message-box{
+.message-box {
   display: flex;
   margin: 30px 0;
   justify-content: space-around;
   width: 100%;
 }
 
-.log{
-  background-color: yellow;
+.log {
   flex: 4;
+  display: flex;
+  padding: 30px;
 }
 
-.coice{
-  width: 100px
+.score {
+  p {
+    text-align: center;
+    font-size: 3em;
+    margin: 0;
+  }
+}
+
+.log-text-container {
+  flex: 1;
+  padding: 20px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  p {
+    margin-top: auto;
+  }
+}
+
+.coice {
+  width: 100px;
 }
